--- a/project0/general.css
+++ b/project0/general.css
@@ -8,6 +8,22 @@ html, body{
     right: 0;
     top: 0;
     margin: 20px;
+    display: flex;
+    justify-content: space-between;
+    column-gap: 10px;
+}
+.search_img, .advanced{
+    background-color: rgb(60, 60, 60);
+    color: white;
+    height: 30px;
+    width: 140px;
+    border: none;
+    border-radius: 5px;
+    transition: 1s;
+}
+.search_img:hover, .advanced:hover{
+    background-color: rgb(90, 90, 90);
+    transform: rotate(90deg) translateX(60px) translateY(70px);
 }
 .logo{
     width: 270px;
@@ -41,8 +57,8 @@ html, body{
     border-radius: 3px;
 }
 .button_container > input:hover{
-    border: 1px solid green;
-    /* border: 1px solid rgb(98, 101, 109); */
+    /* padding: 7px 13px; */
+    border: 1px solid rgb(98, 101, 109);
     box-sizing: border-box;
 }
 .search_bar{
