--- a/project0/general.css
+++ b/project0/general.css
@@ -3,6 +3,10 @@ html, body{
     background-color: rgb(32, 33, 36);
     height: 100%;
 }
+.img_search_request{
+    display: none;
+}
+
 .banner{
     position: absolute;
     right: 0;
@@ -10,7 +14,7 @@ html, body{
     margin: 20px;
     display: flex;
     justify-content: space-between;
-    column-gap: 10px;
+    column-gap: 30px;
 }
 .search_img, .advanced{
     background-color: rgb(60, 60, 60);
@@ -19,11 +23,64 @@ html, body{
     width: 140px;
     border: none;
     border-radius: 5px;
-    transition: 1s;
 }
+.button_hover_box{
+    display: none;
+}
+.button_hover_box:hover .search_img, 
+.button_hover_box:hover .advanced,
 .search_img:hover, .advanced:hover{
-    background-color: rgb(90, 90, 90);
-    transform: rotate(90deg) translateX(60px) translateY(70px);
+    animation: pin 5s;
+    cursor: pointer;
+}
+@keyframes pin {
+    10%{
+        color: black;
+        background-color: white;
+        /* transform: rotate(75deg) translateX(55px) translateY(85px); */
+    }
+    20%{
+        color: black;
+        background-color: white;
+        /* transform: rotate(79deg) translateX(59px) translateY(89px); */
+    }
+    30%{
+        color: black;
+        background-color: white;
+        /* transform: rotate(71deg) translateX(51px) translateY(81px); */
+    }
+    40%{
+        color: black;
+        background-color: white;
+        /* transform: rotate(78deg) translateX(58px) translateY(88px); */
+    }
+    50%{
+        color: black;
+        background-color: white;
+        /* transform: rotate(72deg) translateX(52px) translateY(82px); */
+    }
+    60%{
+        color: black;
+        background-color: white;
+        /* transform: rotate(77deg) translateX(57px) translateY(87px); */
+    }
+    70%{
+        color: black;
+        background-color: white;
+        /* transform: rotate(73deg) translateX(53px) translateY(83px); */
+    }
+    80%{
+        color: black;
+        background-color: white;
+        /* transform: rotate(75deg) translateX(55px) translateY(85px); */
+    }
+    100%{
+        color: black;
+        background-color: white;
+        /* transform: rotate(75deg) translateX(55px) translateY(85px); */
+
+    }
+    
 }
 .logo{
     width: 270px;
@@ -50,6 +107,8 @@ html, body{
     padding: 8px 14px;
     border: 0;
     background-color: rgb(48, 49, 52);
+    border: 1px solid rgba(0, 0, 0, 0);
+    box-sizing: border-box;
     color: white;
     margin-top: 26px;
     line-height: 20px;
@@ -57,7 +116,6 @@ html, body{
     border-radius: 3px;
 }
 .button_container > input:hover{
-    /* padding: 7px 13px; */
     border: 1px solid rgb(98, 101, 109);
     box-sizing: border-box;
 }
