--- a/project0/general.css
+++ b/project0/general.css
@@ -2,11 +2,17 @@ html, body{
     margin: 0;
     background-color: rgb(32, 33, 36);
     height: 100%;
+    font-family: Arial;
 }
 .img_search_request{
     display: none;
 }
-
+.logo42{
+    position: absolute;
+    top: 20px;
+    left: 20px;
+    width: 100px;
+}
 .banner{
     position: absolute;
     right: 0;
@@ -93,6 +99,23 @@ html, body{
     height: 76%;
     gap: 20px 0;
 }
+
+.image_wrapper{
+    position: relative;
+    margin: 0;
+    padding: 0;
+}
+.logo, .logo_text{
+    display: inline;
+}
+.logo_text{
+    position: absolute;
+    right:0;
+    bottom: 5px;
+    color: rgb(67, 125, 212);
+    margin: 0;
+}
+
 .form_banner{
     display: flex;
     flex-direction: column;
@@ -118,6 +141,7 @@ html, body{
 .button_container > input:hover{
     border: 1px solid rgb(98, 101, 109);
     box-sizing: border-box;
+    cursor: pointer;
 }
 .search_bar{
     background-color: rgb(32, 33, 36);
